<resources>
    <string name="app_name">L\'ombre des Purges</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descriptionDino">Espèces de dinosaure avec la capacité de parler.  Ils sont très rapides et agiles. Ils s\'adaptent facilement à différents climats sans aucun problème.</string>
    <string name="descriptionVia">Ce sont des androïdes avec une grande avancée technologique. Leur corps est très résistant, ils ont une grande force et ils ont beaucoup de connaissances technologiques.</string>
    <string name="descriptionKaqchikam">C’est une race de chamans avec une grande foi en leurs dieux et leurs rituels. Capable de voir les prophéties et avec une magie puissante.</string>
    <string name="agilitepurge">10</string>
    <string name="forcepurge">10</string>
    <string name="defencepurge">10</string>
    <string name="endurancepurge">10</string>
    <string name="chapitre1Dino">Oh non! Votre village se fait assaillir par des créatures que vous n’avez jamais vues. Pendant l’attaque, vous arrivez à vous échapper de justesse mais vous voulez des réponses. Vous décidez de prendre la route pour savoir qui sont ces êtres qui massacre votre village et surtout pourquoi. À la limite de votre village, il y trois chemins.  </string>
    <string name="choix1_1">Prendre le chemin vers le bar de guerriers dans la ville De Mayela. </string>
    <string name="choix1_2">Prendre le chemin vers la forêt du silence.</string>
    <string name="choix1_3">Prendre le chemin vers la réserve du lac de cristal</string>
    <string name="chapitre2_1Dino">Vous arrivez dans la ville De Mayale. La meilleure place pour trouver des informations est surement dans le bar de guerriers. Vous rentrez dans le bar et vous trouvez plusieurs Dinos venant d’autres régions. Avec désespoir, vous leur demandez de l’aide mais hélas, ils ne savent rien de ces nouvelles créatures puisque que cette ville n’a pas été attaquée. Pendant que vous parlez, la rue se fait frapper par les envahisseurs. Certains Dinos dans le bar partent au combat tandis qu\'un dit connaitre un chemin secret pour s’échapper. Il n’inspire pas confiance mais vous n’êtes pas un combattant né non plus. </string>
    <string name="choix2_1_1">Attaquer les envahisseurs avec les autres guerriers.</string>
    <string name="choix2_1_2">S’échapper avec le dino qui connait un chemin secret.</string>
    <string name="choix2_1_3">S’échapper sans l’aider du second dino.</string>
    <string name="chapitre2_2Dino">Vous arrivez dans la forêt du silence. Vous savez qu’ici, habite un groupe de dinos très forts. Vous les trouvez et vous leur expliquez la situation. Ils ont du mal à vous croire alors ils vous demandent de partir. Au même moment, un groupe des vilaines créatures qui on attaquer votre village marche non loin en direction de la ville. Vous chuchotez et expliquez aux autres que ce sont eux les envahisseurs. Accompagné des autre dinos, vous vous rendez à la ville De Mayale par un autre chemin. L’attaque a déjà commencé! Les dinos de la forêt se prête à la bataille! Vous hésitez. C’est alors qu’un dino vous dit de le suivre car il connait un chemin secret pour s’échapper.</string>
    <string name="choix2_2_1">Attaquer les inverseurs avec les dinos de la forêt.</string>
    <string name="choix2_2_2">S’échapper avec le dino qui connait un chemin secret.</string>
    <string name="choix2_2_3">S’échapper sans l’aider du dino et laisser les autres dinos qui combattent seuls.</string>
    <string name="chapitre2_3Dino">Lorsque vous arrivez dans la réserve, une attaque est en cours. Les envahisseurs comme les dinos de la réserve, se battent férocement. Un dino vous cri «On a besoin de votre aide! SVP Allez sauver le chef de la réserve en haut des escaliers!». Un autre lui hurle «Non! Nous n’avons pas le temps! Allez appuyer sur le bouton rouge juste là!».  Le combat se joue de peu. Vous êtes au pied de ces long escaliers et à une dizaine de mètres du bouton rouge.  </string>
    <string name="choix2_3_1">Aider les autres dinos à combattre les envahisseurs. </string>
    <string name="choix2_3_2">Aider le chef de la réserve. </string>
    <string name="choix2_3_3">Aller pousser le bouton rouge.</string>
    <string name="chapitre3.1Dino">Vous avez aidé les guerriers à défendre la ville. C’était dur mais vous avez réussi. Au loin, un grand groupe de ces créatures se dirigent vers vous. Un dino venant de la réserve arrive essoufflé. Il explique que celle-ci est attaqué. Sans hésiter vous et les guerriers partez pour la réserve. À votre arrivé, la bataille est finie et les dinos ont réussi à protéger la réserve. Leur chef explique qu’un portail a été ouvert dans le temple de l’âme dans la forêt du silence. Le chef fait un plan pour contre attaquer. Il y a trois groupes. </string>
    <string name="choix3_1_1">Aller avec le groupe qui va attaquer devant le temple.</string>
    <string name="choix3_1_2">Aller avec le groupe qui va attaquer par derrière.</string>
    <string name="choix3_1_3">Aller avec le groupe qui va attaquer par un chemin secret qu’un dino connait.</string>
    <string name="chapitre3.2Dino">Même s’il ne vous inspire pas confiance, vous suivez le dino vers son chemin. D’autre vous ont suivi. Il se prénomme Rex. Il vous explique qu’il a vu comment tout a commencé. Il était dans le temple de l’âme à ce moment-là et un portail s’est ouvert. De celui-ci, les envahisseurs en sont sortis. «Je dois en parler au chef de la réserve! Il sera quoi faire.» Nous finissons par arriver à destination. Il y a eu une bataille mais la réserve s’en est plutôt bien sortie. Rex va parler au chef et ensemble ils concoctent un plan Vous devez choisir dans quel groupe vous irez pour faire la contrattaque. </string>
    <string name="choix3_2_1">Aller avec le groupe qui va attaquer devant le temple. </string>
    <string name="choix3_2_2">Aller avec le groupe qui va attaquer par derrière. </string>
    <string name="choix3_2_3">Aller avec le groupe qui va attaquer par le chemin secret que Rex connait.</string>
    <string name="chapitre3.3Dino">Vous vous êtes échappé de la ville sans regarder en arrière. Pendant que vous marchez et pensez que vous irez chercher de l’aider ailleurs. Votre chemin est bloqué par un groupe d’envahisseurs. Vous essayez de vous défendre mais c’est impossible. Il vous attaque de tous bords. Vous recevez un coup fatal qui vous fait perdre beaucoup de sang. Avant de mourir, vous vous dites «Pourquoi mourir comme ça... Est-ce la fin pour mon peuple? Quel a été ma mauvaise décision?».
                                    GAME OVER </string>
    <string name="chapitre3.4Dino">Vous arrivez près du bouton rouge. Vous pensez qu’en appuyant dessus, peut être que cette action est une lueur d’espoir pour votre peuple. Vous poussez le bouton et la réserve commence à surchauffer. De nombreuses explosions se font entendre. Avant que vous puissiez sortir de la réserve, une grande explosion apparait et vous propulse par en arrière. Plus personne ne peut s’échapper. Vos semblables comme les créatures qui vous ont attaqué vont disparaître dans ce feu et ces décombres.
                                    GAME OVER </string>
    <string name="chapitre3.5Dino">Vous rentrez dans la pièce en haut des escaliers où le chef de la réserve se trouve. Il se bat avec une de ces créatures. Vous vous précipitez dessus et vous arrivez à la maîtriser. «Wow! Merci! Vous très courageux! Je m’appelle Tiro.» Vous redescendez et vous constatez que le combat est terminé. Les dinos de la réserve ont vaincu les envahisseurs. Un dinos du nom de Rex entre dans la réserve. Il dit avoir vu un portail s’ouvrir dans le temple de l’âme dans la forêt du silence. Les créatures en sont sorties et ont attaqué tout sur leur passage. Tiro fait alors un plan pour contre attaquer et vous devez choisir avec quel groupe vous irez. </string>
    <string name="choix3_5_1">Aller avec le groupe qui va attaquer devant le temple. </string>
    <string name="choix3_5_2">Aller avec le groupe qui va attaquer par derrière.</string>
    <string name="choix3_5_3">Aller avec le groupe qui va attaquer par le chemin secret qu’un dino connait.</string>
    <string name="chapitre3.6Dino">Vous avez aidé les guerriers à défendre la réserve. Ils sont très contents de leur victoire. Le chef de la réserve arrive et il vous explique que suite à l’attaque, un ami du nom de Rex a trouvé la place d\'où est-ce que les envahisseurs proviennent. C’est grâce à un portail qui a été ouvert dans le temple de l’âme dans la forêt du silence. Le chef fait alors un plan et vous devez choisir dans quel groupe vous irez pour faire la contrattaque. </string>
    <string name="choix3_6_1">Aller avec le groupe qui va attaquer devant le temple.</string>
    <string name="choix3_6_2">Aller avec le groupe qui va attaquer par derrière.</string>
    <string name="choix3_6_3">Aller avec le groupe qui va attaquer par le chemin secret qu’un dino connait.</string>
    <string name="chapitre4.1Dino">Vous arrivez à l’arrière du temple et vous rentrez. Vous entendez une voix. «Enfin... je vous attendais. Bienvenue à votre mort. Mon nom est Kalameth et nous somme les purges, vos vies sont entre nos mains, vous finirez comment vos amis qui ont attaqué devant le temple. » Kalameth recule et une horde de purges se ruent vers vous. Vous voulez suivre Kalameth pour venger vos amis qui ont péri en avant du temple. Par contre, Tiro vous a confié une bombe pour détruire le portail. Non loin, vous apercevez la chambre avec celui-ci. </string>
    <string name="choix4_1_1">Chercher une place pour se cacher.</string>
    <string name="choix4_1_2">Aller à la chambre du portail.</string>
    <string name="choix4_1_3">Suivre à Kalameth.</string>
    <string name="chapitre4.2Dino">Vous arrivez au centre du temple grâce au chemin que Rex vous a montré. Il nous guide vers la chambre du portail. Vous tournez le coin d’une intersection et une voix retentie « Comment vous êtes arrivé ici? Aucune importance! Je suis Kalameth et nous sommes les purges! Vos vies sont entre nos mains! Purges! Protègez la chambre du portail et ne les laissez pas entrer dans la salle des purges. ». </string>
    <string name="choix4_2_1">Rester et combattre Kalameth.</string>
    <string name="choix4_2_2">Continuer vers la chambre du portail.</string>
    <string name="choix4_2_3">Aller dans la chambre des purges.</string>
    <string name="chapitrefin1Dino">Vous êtes devant le temple, La porte s’ouvre et une horde d\'envahisseurs arrivent. Le plus gros s’avance et cri « Je suis Kalameth et nous sommes les purges! Vous êtes arrivé très loin pour rien. Votre mort sera rapide. » À ce moment, des centaines de purges apparaissent derrière nous. Seul un miracle pourrait nous sauver. Vous vous battez sans cesse mais ils sont plus fort et trop nombreux. Vous êtes tombez.  Le dernier choses que vous voyez, est Tiro se faire arracher la tête.  </string>
    <string name="agilit">Agilité</string>
    <string name="force">Force</string>
    <string name="commencer">Commencer</string>
    <string name="cr_ation_personnage">Création personnage</string>
    <string name="nom">Nom:</string>
    <string name="endurence">Endurence</string>
    <string name="dimension_des_dinos">Dimension des Dinos</string>
    <string name="dimension_des_v_i_a">Dimension des V.I.A.</string>
    <string name="dimension_des_kaqchikam">Dimension des Kaqchikam</string>
    <string name="s_lection_aventure">Sélection aventure</string>
    <string name="race">Race :</string>
</resources>