<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E2449"
    tools:context=".VueCreationPersonnage">

    <Button
        android:id="@+id/buttonPersonnage"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/commencer"
        android:textColor="#000000"
        android:textSize="14sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#000000" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="319dp"
        android:layout_height="108dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:shadowColor="#040202"
        android:text="@string/cr_ation_personnage"
        android:textColor="#AE5959"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionRace"
        android:layout_width="377dp"
        android:layout_height="71dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowRadius="60"
        android:text="@string/descriptionDino"
        android:textColor="#EFBFBF"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout20" />

    <ImageView
        android:id="@+id/imageRaceCreationPersonnage"
        android:layout_width="170dp"
        android:layout_height="166dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/dinoh" />

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="362dp"
        android:layout_height="79dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="146dp"
            android:layout_height="62dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/nom"
            android:textColor="#EFBFBF"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="209dp"
            android:layout_height="62dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/aldrich"
            android:inputType="textPersonName"
            android:textColor="#EFBFBF"
            android:textSize="30sp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="374dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPersonnage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionRace">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/force"
                android:textColor="#EFBFBF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/forceCreationPersonnage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="= 10 + dé6"
                android:textColor="#EFBFBF"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageView12"
                android:layout_width="37dp"
                android:layout_height="32dp"
                android:background="@drawable/boutondes"
                android:padding="5dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/endurence"
                android:textColor="#EFBFBF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/endurenceCreationPersonnage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="= 20 + 3 * dé10"
                android:textColor="#EFBFBF"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageView13"
                android:layout_width="38dp"
                android:layout_height="32dp"
                android:background="@drawable/boutondes"
                android:padding="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/agilit"
                android:textColor="#EFBFBF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/agilitéCreationPersonnage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="= 10 + dé6"
                android:textColor="#EFBFBF"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageView14"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:background="@drawable/boutondes"
                android:padding="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/intelligence"
                android:textColor="#EFBFBF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/intelligenceCreationPersonnage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="= 5 + dé6"
                android:textColor="#EFBFBF"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageView15"
                android:layout_width="37dp"
                android:layout_height="32dp"
                android:background="@drawable/boutondes"
                android:padding="5dp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout20"
        android:layout_width="358dp"
        android:layout_height="59dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/descriptionRace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout19">

        <TextView
            android:id="@+id/race_texte2"
            android:layout_width="149dp"
            android:layout_height="52dp"
            android:text="@string/race"
            android:textColor="#EFBFBF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/nomRace"
            android:layout_width="200dp"
            android:layout_height="54dp"
            android:text="Dinos"
            android:textColor="#EFBFBF"
            android:textSize="30sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>